# pybox-manager

./: .gitignore  CMakeLists.txt  README.md  README_FR.md  doc_eng.md  manager_utils.py  pybox_manager.py
Assets/BoxManager/: NewBoxPattern-skeletton.h  NewBoxPattern-skeletton.hpp  StimulationsCodes.py  openvibe.py  ovpCBoxAlgorithmPython.h  ovpCBoxAlgorithmPython3.cpp  ovpCBoxAlgorithmPython3.h  ovpNewBoxPattern.cpp  ovpNewBoxPattern.h  ovpNewBoxPattern_prev.h  ovtk_defines.h  ovtk_main.cpp
ScriptBox/: DataViz.py  DatasetCreator.py  ProcessML.py  TrainerML.py
box-tutorials/: Bagging-tutorial.mxs  DataViz-tutorial.mxs  DecisionTree-tutorial.mxs  RandomForest-tutorial.mxs  RiemannTangentSpace-tutorial.mxs  SVM-tutorial.mxs  data-tutorial.csv
box-tutorials/pybox/: ADA.xml  Bagging.xml  DataViz-tutorial.mxs  DatasetCreator.xml  DecisionTree.xml  ExtraTrees-tutorial.mxs  GaussianNB.xml  KNearestNeighbors.mxs  LDA-tutorial.mxs  LogisticRegression.xml  MLP.xml  NearestCentroid-tutorial.mxs  ProcessML-tutorial.mxs  ProcessML.xml  RMDM.xml  RandomForest.xml  RiemannTangentSpace.xml  SGD-tutorial.mxs  SVM.xml  data-viz.xml  dataset-creator.xml  process-sklearn.xml  trainer-sklearn.xml
doc/: DataViz-doc.skedoc  DatasetCreator-doc.skedoc  Doc_BoxAlgorithm_ADA.dox-part  Doc_BoxAlgorithm_Decision_Tree_Classifier.dox-part  Doc_BoxAlgorithm_Extra_Trees.dox-part  Doc_BoxAlgorithm_KNearestNeighbors.dox-part  Doc_BoxAlgorithm_NearestCentroid.dox-part  Doc_BoxAlgorithm_ProcessML.dox-part  Doc_BoxAlgorithm_RMDM.dox-part  Doc_BoxAlgorithm_Random_Forest.dox-part  Doc_BoxAlgorithm_SGD.dox-part  Doc_BoxAlgorithm_TrainerML.dox-part  ProcessML-doc.skedoc  bagging  gaussian_nb  lda  logistic_regression  mlp  riemann_tangent_space  skelleton  svm
share/: PolyBox.py  PolyStimulations.py
share/pybox/: DataViz.py  DatasetCreator.py  TrainerML.py
src/: CPolyBox.cpp  defines.h  defines.hpp  main.cpp  ovp_defines.h  ovp_main.cpp
src/box-algorithms/: CPolyBox.cpp  CPolyBox.h  CPolyBox.hpp  DataViz.hpp  (+25 more)
(+50 files in other folders)
